--- a/1.ELEMENTOS.md
+++ b/1.ELEMENTOS.md
@@ -12,7 +12,6 @@ http://jamj2000.github.io/slides/2017/09/05/entornosdesarrollo/
 - Identificar las fases de desarrollo de una aplicación informática.
 - Clasificar los lenguajes de programación.
 
-
 ### Tipos de software 
 
 - __De sistema__ (Sistema operativo, drivers)
@@ -147,7 +146,7 @@ recoge nuevos datos desde la entrada, se muestran los resultados, se leen/guarda
 
 ### Modelo en cascada (I)
 
-![Modelo en cascada](assets/cascada.png)
+![Modelo en cascada](img/cascada.png)
 
 
 ### Modelo en cascada (II)
