--- a/1.ELEMENTOS.md
+++ b/1.ELEMENTOS.md
@@ -4,7 +4,6 @@ http://jamj2000.github.io/slides/2017/09/05/entornosdesarrollo/
 
 ## Introducción
 
-
 ### En esta Unidad aprenderemos a
 
 - Reconocer la relación de los programas con los componentes del sistema informático.
@@ -161,7 +160,7 @@ recoge nuevos datos desde la entrada, se muestran los resultados, se leen/guarda
 
 ### Modelo en V (I)
 
-![Modelo en V](assets/v.png)
+![Modelo en V](img/v.png)
 
 
 ### Modelo en V (II)
@@ -180,7 +179,7 @@ recoge nuevos datos desde la entrada, se muestran los resultados, se leen/guarda
   - por no existir experiencia previa.
   - por omisión o falta de concreción del usuario/cliente.
 
-![Modelo de construcción de prototipos](assets/prototipos.png)
+![Modelo de construcción de prototipos](img/prototipos.png)
 
 
 ### Prototipos (II)
@@ -206,7 +205,7 @@ recoge nuevos datos desde la entrada, se muestran los resultados, se leen/guarda
 - Desarrollado por Boehm en 1988.
 - La actividad de ___ingeniería___ corresponde a las fases de los modelos clásicos: análisis, diseño, codificación, ...
 
-![Modelo en espiral](assets/espiral.png)
+![Modelo en espiral](img/espiral.png)
 
 
 ### Modelo en espiral (II)
@@ -214,7 +213,7 @@ recoge nuevos datos desde la entrada, se muestran los resultados, se leen/guarda
 
 - En la actividad de ___ingeniería___ se da gran importancia a la reutilización de código.
 
-![Modelo en espiral](assets/espiral-poo.png)
+![Modelo en espiral](img/espiral-poo.png)
 
 
 ### Metodologías ágiles (I)
@@ -252,7 +251,7 @@ recoge nuevos datos desde la entrada, se muestran los resultados, se leen/guarda
 
 Pizarra kanban
 
-![Pizarra kanban](assets/kanban-board.png)
+![Pizarra kanban](img/kanban-board.png)
 
 
 #### __Scrum (I)__
@@ -266,7 +265,7 @@ Pizarra kanban
 
 #### __Scrum (II)__
 
-![Proceso SCRUM](assets/scrum.png)
+![Proceso SCRUM](img/scrum.png)
 
 
 #### __XP (Programación extrema) (I)__
