--- a/1.ELEMENTOS.md
+++ b/1.ELEMENTOS.md
@@ -301,23 +301,23 @@ __Características__
 ###  Obtención de código ejecutable
 
 - Para obtener código binario ejecutable tenemos 2 opciones:
-  - __Compilar__
-  - __Interpretar__
+  - __Compilar__ apuntes: obtenemos un archivo ejecutable
+  - __Interpretar__ apuntes: no obtenemos archivo ejecutable. Se lo pasa a la cpu para que lo ejecute
 
 
 ### Proceso de compilación/interpretación
 
 - La compilación/interpretación del código fuente se lleva a cabo en dos fases:
-  1. __Análisis léxico__
-  2. __Análisis sintáctico__
-- Si no existen errores, se genera el código objeto correspondiente.
+  1. __Análisis léxico__ apuntes: comprobar ortografía (Si las palabras y símbolos estan bien escritas)
+  2. __Análisis sintáctico__ apuntes: orden correcto de las palabras y símbolos
+- Si no existen errores, se genera el código objeto correspondiente. 
 - Un código fuente correctamente escrito no significa que funcione según lo deseado.
 - No se realiza un análisis semántico.
 
 
 ### Lenguajes compilados
 
-- Ejemplos: C, C++
+- Ejemplos: C, C++ apuntes: generan archivo ejecutable (no es multiplataforma)
 - Principal ventaja: Ejecución muy eficiente.
 - Principal desventaja: Es necesario compilar cada vez que el código fuente es modificado.
 
@@ -341,7 +341,7 @@ __Características__
 
 - Ventajas:
   - Estructurado y Orientado a Objetos
-  - Relativamente fácil de aprender
+  - Relativamente fácil de aprender 
   - Buena documentación y base de usuarios 
 - Desventajas:
   - Menos eficiente que los lenguajes compilados 
@@ -350,8 +350,8 @@ __Características__
 ### Tipos (I)
 
 - Según la forma en la que operan:
-  - __Declarativos__: indicamos el resultado a obtener sin especificar los pasos.
-  - __Imperativos__: indicamos los pasos a seguir para obtener un resultado.
+  - __Declarativos__: indicamos el resultado a obtener sin especificar los pasos. 
+  - __Imperativos__: indicamos los pasos a seguir para obtener un resultado. 
 
 
 ### Tipos (II)
@@ -368,14 +368,14 @@ __Características__
 - Tipos de __lenguajes imperativos__:
   - Estructurados: C
   - Orientados a objetos: Java
-  - Multiparadigma: C++, Javascript
+  - Multiparadigma: C++, Javascript apuntes: se utilizan varios paradigmas
 - Los lenguajes orientados a objetos son también lenguajes estructurados. 
 - Muchos de estos lenguajes son compilados.
 
 
 ### Tipos (IV)
 
-- Tipos de lenguajes según nivel de abstracción: 
+- Tipos de lenguajes según nivel de abstracción: apuntes: según el código escrito. Mientras mayor nivel de abstracción menos código tenemos que escribir.
   - Bajo nivel: ensamblador
   - Medio nivel: C
   - Alto nivel: C++, Java
@@ -384,9 +384,9 @@ __Características__
 ### Evolución
 
 - Código binario
-- Ensamblador 
+- Ensamblador apuntes: solo para algunos drivers y arranque del sistema
 - Lenguajes estructurados 
-- Lenguajes orientados a objetos
+- Lenguajes orientados a objetos apuntes: permiten programar aplicaciones complejas
 
 
 ### Historia simplificada
