--- a/1.ELEMENTOS.md
+++ b/1.ELEMENTOS.md
@@ -344,19 +344,19 @@ __Características__
   - Relativamente fácil de aprender 
   - Buena documentación y base de usuarios 
 - Desventajas:
-  - Menos eficiente que los lenguajes compilados 
+  - Menos eficiente que los lenguajes compilados apuntes: más lento a la hora de ejecutar
 
 
 ### Tipos (I)
 
 - Según la forma en la que operan:
-  - __Declarativos__: indicamos el resultado a obtener sin especificar los pasos. 
-  - __Imperativos__: indicamos los pasos a seguir para obtener un resultado. 
+  - __Declarativos__: indicamos el resultado a obtener sin especificar los pasos. apuntes: SQL
+  - __Imperativos__: indicamos los pasos a seguir para obtener un resultado. apuntes: la mayoría de lenguajes
 
 
 ### Tipos (II)
 
-- Tipos de __lenguajes declarativos__:
+- Tipos de __lenguajes declarativos__: apuntes: se utiliza muy poco en la actualidad, excepto SQL
   - Lógicos: Utilizan reglas. Ej: Prolog
   - Funcionales: Utilizan funciones. Ej: Lisp, Haskell
   - Algebraicos: Utilizan sentencias. Ej: SQL
@@ -368,7 +368,7 @@ __Características__
 - Tipos de __lenguajes imperativos__:
   - Estructurados: C
   - Orientados a objetos: Java
-  - Multiparadigma: C++, Javascript apuntes: se utilizan varios paradigmas
+  - Multiparadigma: C++, Javascript apuntes: se utilizan varios paradigmas y se puede trabajar de diferente forma (utilizando lenguaje basado en objetos o estructurados por ejemplo)
 - Los lenguajes orientados a objetos son también lenguajes estructurados. 
 - Muchos de estos lenguajes son compilados.
 
@@ -384,9 +384,9 @@ __Características__
 ### Evolución
 
 - Código binario
-- Ensamblador apuntes: solo para algunos drivers y arranque del sistema
+- Ensamblador apuntes: solo para algunos drivers y arranque del sistema. Ensamblar es pasar de ensamblador a código binario
 - Lenguajes estructurados 
-- Lenguajes orientados a objetos apuntes: permiten programar aplicaciones complejas
+- Lenguajes orientados a objetos apuntes: permiten programar aplicaciones complejas. Son lenguajes estructurados. 
 
 
 ### Historia simplificada
