--- a/1.ELEMENTOS.md
+++ b/1.ELEMENTOS.md
@@ -387,7 +387,169 @@ __Características__
 - Ensamblador apuntes: solo para algunos drivers y arranque del sistema. Ensamblar es pasar de ensamblador a código binario
 - Lenguajes estructurados 
 - Lenguajes orientados a objetos apuntes: permiten programar aplicaciones complejas. Son lenguajes estructurados. 
+322
 
+- Principal desventaja: Es necesario compilar cada vez que el código fuente es modificado.
+
+323
+
+​
+
+324
+
+​
+
+325
+
+### Lenguajes interpretados
+
+326
+
+​
+
+327
+
+- Ejemplos: PHP, Javascript
+
+328
+
+- Principal ventaja: El código fuente se interpreta directamente.
+
+329
+
+- Principal desventaja: Ejecución menos eficiente.
+
+330
+
+​
+
+331
+
+​
+
+332
+
+### JAVA (I)
+
+333
+
+​
+
+334
+
+- Lenguajes compilado e interpretado.
+
+335
+
+- El código fuente Java __se compila__ y se obtiene un código binario intermedio denominado __bytecode__. 
+
+336
+
+- Puede considerarse código objeto pero destinado a la máquina virtual de Java en lugar de código objeto nativo. 
+
+337
+
+- Después este __bytecode__ __se interpreta__ para ejecutarlo.
+
+338
+
+​
+
+339
+
+​
+
+340
+
+### JAVA (II)
+
+341
+
+​
+
+342
+
+- Ventajas:
+
+343
+
+  - Estructurado y Orientado a Objetos
+
+344
+
+  - Relativamente fácil de aprender 
+
+345
+
+  - Buena documentación y base de usuarios 
+
+346
+
+- Desventajas:
+
+347
+
+  - Menos eficiente que los lenguajes compilados 
+
+348
+
+​
+
+349
+
+​
+
+350
+
+### Tipos (I)
+
+351
+
+​
+
+352
+
+- Según la forma en la que operan:
+
+353
+
+  - __Declarativos__: indicamos el resultado a obtener sin especificar los pasos. 
+
+354
+
+  - __Imperativos__: indicamos los pasos a seguir para obtener un resultado. 
+
+355
+
+​
+
+356
+
+​
+
+357
+
+### Tipos (II)
+
+358
+
+​
+
+359
+
+- Tipos de __lenguajes declarativos__:
+
+360
+
+  - Lógicos: Utilizan reglas. Ej: Prolog
+
+361
+
+  - Funcionales: Utilizan funciones. Ej: Lisp, Haskell
+
+362
+
+  - Algebraicos: Utilizan sentencias. Ej: SQL
 
 ### Historia simplificada
 
@@ -401,11 +563,11 @@ __Características__
 
 ### Criterios para la selección de un lenguaje
 
-- Campo de aplicación
-- Experiencia previa
-- Herramientas de desarrollo
-- Documentación disponible
-- Base de usuarios
-- Reusabilidad
-- Transportabilidad
-- Imposición del cliente
+- Campo de aplicación apuntes: tipo de aplicación que vamos a desarrollar
+- Experiencia previa apuntes: tanto la persona como la empresa. Utilizar lenguajes que ya conoces
+- Herramientas de desarrollo apuntes: los lenguajes deben de tener buenas herramientas como entornos de desarrollos 
+- Documentación disponible 
+- Base de usuarios apuntes: que lo conozcan muchas personas
+- Reusabilidad apuntes: bibliotecas estándares que se pueden reutilizar
+- Transportabilidad apuntes: que funcione en muchas plataformas
+- Imposición del cliente apuntes: condiciones a la hora de desarrollar la aplicación que te obligan a cambiar de lenguaje
