--- a/1.ELEMENTOS.md
+++ b/1.ELEMENTOS.md
@@ -387,123 +387,36 @@ __Características__
 - Ensamblador apuntes: solo para algunos drivers y arranque del sistema. Ensamblar es pasar de ensamblador a código binario
 - Lenguajes estructurados 
 - Lenguajes orientados a objetos apuntes: permiten programar aplicaciones complejas. Son lenguajes estructurados. 
-322
 
-- Principal desventaja: Es necesario compilar cada vez que el código fuente es modificado.
-
-323
-
-​
-
-324
-
-​
-
-325
+- Principal desventaja: Es necesario compilar cada vez que el código fuente es modificado
 
 ### Lenguajes interpretados
 
-326
-
-​
-
-327
-
 - Ejemplos: PHP, Javascript
-
-328
-
 - Principal ventaja: El código fuente se interpreta directamente.
-
-329
-
 - Principal desventaja: Ejecución menos eficiente.
-
-330
-
-​
-
-331
-
-​
-
-332
 
 ### JAVA (I)
 
-333
-
-​
-
-334
-
 - Lenguajes compilado e interpretado.
-
-335
-
 - El código fuente Java __se compila__ y se obtiene un código binario intermedio denominado __bytecode__. 
-
-336
-
 - Puede considerarse código objeto pero destinado a la máquina virtual de Java en lugar de código objeto nativo. 
-
-337
-
 - Después este __bytecode__ __se interpreta__ para ejecutarlo.
-
-338
-
-​
-
-339
-
-​
-
-340
 
 ### JAVA (II)
 
-341
-
-​
-
-342
-
 - Ventajas:
 
-343
-
   - Estructurado y Orientado a Objetos
-
-344
-
   - Relativamente fácil de aprender 
-
-345
-
   - Buena documentación y base de usuarios 
-
-346
 
 - Desventajas:
 
-347
-
   - Menos eficiente que los lenguajes compilados 
-
-348
-
-​
-
-349
-
-​
-
-350
 
 ### Tipos (I)
 
-351
 
 ​
 
