--- a/2.ENTORNOS.md
+++ b/2.ENTORNOS.md
@@ -11,13 +11,13 @@ En esta Unidad aprenderemos a:
 
 ### Conceptos
 
-- Codigo fuente
-- Codigo intermedio u objeto
-- Codigo binario
-- Bibliotecas (librerías)
-- Compilar
-- Enlazar (Link)
-- Interpretar
+- Codigo fuente apuntes: archivo de texto legible escrito en un lenguaje de programación
+- Codigo intermedio u objeto apuntes: código binario no ejecutable
+- Codigo binario apuntes: código binario ejecutable
+- Bibliotecas (librerías) apuntes: también llamadas librerías. Una serie de archivo con código fuente o código objeto, que amplian la funcionalidad del lenguaje.
+- Compilar apuntes: coger código fuente y traducirlo a código objeto.
+- Enlazar (Link) apuntes: coger varios archivos objetos y juntarlos para crear un ejecutable.
+- Interpretar apuntes: equivalente a compilar (más o menos). Leer el código fuente y generar el código binario para ejecutarlo en el momento. No se genera ningún archivo.
 
 
 
@@ -27,7 +27,7 @@ En esta Unidad aprenderemos a:
 ### Lo básico
 
 - Editor de texto: permite escribir código fuente
-- Compilador: genera código objeto a partir del código fuente
+- Compilador: genera código objeto a partir del código fuente 
 - Enlazador: agrupa varios archivos objeto en uno binario
 - Interprete: lee código fuente y genera código binario para su ejecución
 
@@ -36,14 +36,14 @@ En esta Unidad aprenderemos a:
 
 > Conjunto de archivos objeto que extienden la funcionalidad del lenguaje
 
-- __Biblioteca estándar__ del lenguaje
-- __Bibliotecas adicionales__
+- __Biblioteca estándar__ del lenguaje apuntes: lo que suele venir con el lenguaje.
+- __Bibliotecas adicionales__ apuntes: cojemos bibliotecas de otros sitios para aumentar la funcionalidad.
 
 
 ### Bibliotecas (o librerías) (II)
 
-- __Biblioteca estándar del lenguaje C__
-  - Entrada y salida por terminal
+- __Biblioteca estándar del lenguaje C__ 
+  - Entrada y salida por terminal 
   - Manejo de archivos
   - Funciones matemáticas
 - __Biblioteca estándar del lenguaje Java__
@@ -54,16 +54,17 @@ En esta Unidad aprenderemos a:
   - Red
   - Bases de datos
   - Gráficos (sólo 2D)
-
+ 
 
 ### Bibliotecas (o librerías) (III)
 
 - Cada biblioteca está compuesta por varios archivos objeto
 - Tipos
-  - bibliotecas dinámicas (.DLL o .so) (.jar en Java)
+  - bibliotecas dinámicas (.DLL o .so) (.jar en Java) apuntes: son las más utilizadas porque tienen ventaja sobre las estáticas. No se juntan las bibliotecas con el ejecutable (En el enlazado). Ventajas: al tener bibliotecas separadas del ejecutable, la biblioteca se puede actualizar independientemente del programa. El ejecutable pesa menos. Se pueden compartir entre varios programas. Desventajas: no es un programa autocontenido, no es dependiente, depende de las bibliotecas y hay que instalar el programa con las bibliotecas, o las bibliotecas tienen que estar instaladas en el equipo.
     - muy usadas
-  - bibliotecas estática (.LIB o .a)
-    - menos usadas actualmente
+  - bibliotecas estáticas (.LIB o .a) apuntes: se juntan las bibliotecas con el ejecutable (En el enlazado). .lib para windows y .a para linux. Ventajas: es un programa autocontenido, juntamos los códigos del programa y de las bibliotecas. Es difícil que el programa falle. Desventajas: cada archivo ejecutable pesa mucho porque tienen incorporadas las bibliotecas. Las bibliotecas se repiten en cada archivo. Si actualizamos una biblioteca, tenemso que recompilar cada uno de los programas que tienen esa biblioteca.
+  
+    - menos usadas actualmente 
 
 
 ### Bibliotecas (o librerías) (IV)
